<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kartinka"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:gravity="end"
        android:hint="0"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        />

    <Button
        android:id="@+id/botC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/black"
        android:text="@string/c"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/percent"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/botC"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/divide"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_percent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="DEL"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_divide"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_7"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botC"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_8"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_7"
        app:layout_constraintTop_toBottomOf="@id/bot_percent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_9"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_8"
        app:layout_constraintTop_toBottomOf="@id/bot_divide"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="X"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_9"
        app:layout_constraintTop_toBottomOf="@id/bot_del"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_4"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bot_7"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginLeft="12dp"
        android:text="@string/bot_5"
        android:textSize="25sp"

        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_4"
        app:layout_constraintTop_toBottomOf="@id/bot_8"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_6"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_5"
        app:layout_constraintTop_toBottomOf="@id/bot_9"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_minus"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_6"
        app:layout_constraintTop_toBottomOf="@id/bot_multiply"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_1"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bot_4"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_2"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_1"
        app:layout_constraintTop_toBottomOf="@id/bot_5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_3"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_2"
        app:layout_constraintTop_toBottomOf="@id/bot_6"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_plus"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_3"
        app:layout_constraintTop_toBottomOf="@id/bot_minus"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_0"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bot_1"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_demi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_demi"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_0"
        app:layout_constraintTop_toBottomOf="@id/bot_2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/bot_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/bot_equals"
        android:textSize="25sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/bot_demi"
        app:layout_constraintTop_toBottomOf="@id/bot_3"
        app:layout_constraintVertical_chainStyle="packed"

        />


</androidx.constraintlayout.widget.ConstraintLayout>